fix: align items

--- a/docs/style.css
+++ b/docs/style.css
@@ -123,7 +123,7 @@ img {
   section {
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     margin-bottom: 100px;
   }
 
